@@ -1,3 +1,3 @@
 module blogbitix.http {
-    requires jdk.incubator.httpclient;
+    requires java.net.http;
 }
